--- a/zy01.html
+++ b/zy01.html
@@ -10,7 +10,7 @@
     自我介绍：谢老师好，我是孔美鑫，一位九零后大姑娘，来自素有“八朝古都”之称的河南开封。
     性格内向随和，倔强执着。
     爱好听歌，看漫画，养宠物，拍风景照，喜欢星空大海，蓝天白云。<p></p>
-    <img src="kmx.jpg" alt="孔美鑫的自拍照"><p></p>
+    <img src="kmx.jpg" alt="自拍照"><p></p>
     <body>
         <div>
             <h1>舌尖上的开封</h1>
