--- a/kmx.html
+++ b/kmx.html
@@ -9,8 +9,9 @@
     通信1902   201916130202   孔美鑫
     <ui>
         <li><a href="zy01.html">作业1</a></li>
-        <li><a href="">作业2</a></li>
-        <li><a href="">作业3</a></li>
+        <li><a href="zy02.html">作业2</a></li>
+        <li><a href="zy03.html">作业3</a></li>
+        <li><a href="dazuoye.html">大作业</a></li>
         <li><a href="">作业4</a></li>
         <li><a href="">作业5</a></li>
         <li><a href="">作业6</a></li>
